# mcd-apx

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.md  json-to-raw.py
devbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
devbuild/src/: Makefile  mcd_apx
devbuild/triangle/: Makefile  cmake_install.cmake  triangle
devbuild2/: CMakeCache.txt  Makefile  cmake_install.cmake
devbuild2/src/: Makefile  cmake_install.cmake  mcd_apx
devbuild2/triangle/: Makefile  triangle
src/: .gitignore  CMakeLists.txt  Tri.cpp  Tri.h  arg_eval.cc  basic.h  broker.cpp  broker.h  convex_hull.cc  data.cpp  data.h  decomp.cc  defs.cpp  defs.h  headers.h  io.cc  list.h  main.cc  mcd_apx  numerics.h  onion.cc  random.h
testinput/: byhand.pnts  uniform-0000100-1.instance.pnts
triangle/: CMakeLists.txt  triangle.c  triangle.h
